--- a/index.html
+++ b/index.html
@@ -14,5 +14,22 @@
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
           </svg>
     </header>
+    <main id="landing">
+        <div>
+            <h1>Hey there. I'm Abel<br><span class="greeny">I'm a software developer</span></h1>
+            <p id="main-support-text"> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+                don’t hestiate to contact me.</p>
+        </div>
+        <div id="logo-cloud">
+            <a href="#"><img src="./assets/svg/twitter.svg" alt="twitter"></a>
+            <a href="#"><img src="./assets/svg/Linkedin-icon.svg" alt="LinkedIn"></a>
+            <a href="#"><img src="./assets/svg/medium.svg" alt="Medium"></a>
+            <a href="#"><img src="./assets/svg/github.svg" alt="Github" ></a>
+            <a href="#"><img src="./assets/svg/angellist.svg" alt="Angellist"></a>
+        </div>
+        <div id="scroll-down">
+            <button><img src="./assets/png/arrowtip.png" alt=""> </button>
+        </div>
+    </main>
 </body>
 </html>
