add screnshot to README.md File

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 <body>
     <header id="header">
-        <h3 id="welcome">Welcome</h3>
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon-md" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-          </svg>
+        <nav>
+            <h3 id="welcome">Welcome</h3>
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon-md" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+            </svg>
+        </nav>
     </header>
     <main id="landing">
         <div>
