--- a/index.html
+++ b/index.html
@@ -9,27 +9,41 @@
 </head>
 <body>
     <header id="header">
+        <a href="/" id="welcome">Welcome</a>
         <nav>
-            <h3 id="welcome">Welcome</h3>
-            <svg xmlns="http://www.w3.org/2000/svg" class="icon-md" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-            </svg>
+            <button>
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon-md" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+                </svg>
+            </button>
         </nav>
     </header>
-    <main id="landing">
+    <main class="landing">
         <div>
             <h1>Hey there. I'm Abel<br><span class="greeny">I'm a software developer</span></h1>
             <p id="main-support-text"> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
                 don’t hestiate to contact me.</p>
         </div>
         <div id="logo-cloud">
-            <a href="#"><img src="./assets/svg/twitter.svg" alt="twitter"></a>
-            <a href="#"><img src="./assets/svg/Linkedin-icon.svg" alt="LinkedIn"></a>
-            <a href="#"><img src="./assets/svg/medium.svg" alt="Medium"></a>
-            <a href="#"><img src="./assets/svg/github.svg" alt="Github" ></a>
-            <a href="#"><img src="./assets/svg/angellist.svg" alt="Angellist"></a>
+            <ul>
+                <li>
+                    <a href="#"><img src="./assets/svg/twitter.svg" alt="twitter"></a>
+                </li>
+                <li>
+                    <a href="#"><img src="./assets/svg/Linkedin-icon.svg" alt="LinkedIn"></a>
+                </li>
+                <li>
+                    <a href="#"><img src="./assets/svg/medium.svg" alt="Medium"></a>
+                </li>
+                <li>
+                    <a href="#"><img src="./assets/svg/github.svg" alt="Github" ></a>
+                </li>
+                <li>
+                    <a href="#"><img src="./assets/svg/angellist.svg" alt="Angellist"></a>
+                </li>
+            </ul>
         </div>
-        <div id="scroll-down">
+        <div class="scroll-down">
             <button><img src="./assets/png/arrowtip.png" alt=""> </button>
         </div>
     </main>
