--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>
     </header>
     <main class="landing">
-        <div>
+        <div class="landiv">
             <h1>Hey there. I'm Abel<br><span class="greeny">I'm a software developer</span></h1>
             <p id="main-support-text"> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
                 don’t hestiate to contact me.</p>
@@ -46,6 +46,90 @@
         <div class="scroll-down">
             <button><img src="./assets/png/arrowtip.png" alt=""> </button>
         </div>
+
+        <div id="my-work">
+            <div class="first section">
+                <h2>My Recent Works</h2>
+                <img src="./assets/png/separator.png" alt="separator">
+            </div>
+
+            <div class="second section">
+
+                <div class="card">
+                    <img src="./assets/screenshots/placesplit.png" alt="test.placesplit.com">
+                    <h3>Placesplit Real Estate Agency</h3>
+                    <ul>
+                        <li>Vue</li>
+                        <li>Nuxt</li>
+                        <li>Laravel</li>
+                        <li>MailiSearch</li>
+                    </ul>
+                    <a href="https://test.placesplit.com">See Project</a>
+                </div>
+
+                <div class="card">
+                    <img src="./assets/screenshots/wootbit-io.png" alt="wootbit.io">
+                    <h3>Wootbit Software Develorper Agency</h3>
+                    <ul>
+                        <li>Vue</li>
+                        <li>Nuxt</li>
+                        <li>Laravel</li>
+                        <li>Elastic Search</li>
+                    </ul>
+                    <a href="https://wootbit.io">See Project</a>
+                </div>
+
+                <div class="card">
+                    <img src="./assets/screenshots/placesplit.png" alt="test.placesplit.com">
+                    <h3>Placesplit Real Estate Agency</h3>
+                    <ul>
+                        <li>Vue</li>
+                        <li>Nuxt</li>
+                        <li>Laravel</li>
+                        <li>MailiSearch</li>
+                    </ul>
+                    <a href="https://test.placesplit.com">See Project</a>
+                </div>
+
+                <div class="card">
+                    <img src="./assets/screenshots/wootbit-io.png" alt="wootbit.io">
+                    <h3>Wootbit Software Develorper Agency</h3>
+                    <ul>
+                        <li>Vue</li>
+                        <li>Nuxt</li>
+                        <li>Laravel</li>
+                        <li>Elastic Search</li>
+                    </ul>
+                    <a href="https://wootbit.io">See Project</a>
+                </div>
+
+                <div class="card">
+                    <img src="./assets/screenshots/placesplit.png" alt="test.placesplit.com">
+                    <h3>Placesplit Real Estate Agency</h3>
+                    <ul>
+                        <li>Vue</li>
+                        <li>Nuxt</li>
+                        <li>Laravel</li>
+                        <li>MailiSearch</li>
+                    </ul>
+                    <a href="https://test.placesplit.com">See Project</a>
+                </div>
+
+                <div class="card">
+                    <img src="./assets/screenshots/wootbit-io.png" alt="wootbit.io">
+                    <h3>Wootbit Software Develorper Agency</h3>
+                    <ul>
+                        <li>Vue</li>
+                        <li>Nuxt</li>
+                        <li>Laravel</li>
+                        <li>Elastic Search</li>
+                    </ul>
+                    <a href="https://wootbit.io">See Project</a>
+                </div>
+
+            </div>
+        </div>
+
     </main>
 </body>
 </html>
