add about me section

--- a/index.html
+++ b/index.html
@@ -126,10 +126,56 @@
                     </ul>
                     <a href="https://wootbit.io">See Project</a>
                 </div>
-
             </div>
         </div>
-
+<div id="about-me">
+    <div class="about-me-first">
+        <img id="top-right-img" src="./assets/svg/1-aboutme-mobile.svg" alt="">
+        <h2>About me</h2>
+        <p>  I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+            don’t hestiate to contact me.</p>
+            <a href="#">Get My Resume</a>  
+            <img id="bottom-left-img" src="./assets/svg/2-aboutme-mobile.svg" alt="">
+        </div>
+        <div class="about-me-second">
+            <div class="second-card">
+                <div>
+                    <img src="./assets/png/icon-language.png" alt="">
+                </div>
+                <h3>Languages</h3>
+                <ul>
+                    <li>JavaScript</li>
+                    <li>PHP</li>
+                    <li>Go</li>
+                    <li>Ruby</li>
+                </ul>
+            </div>
+            <div class="second-card">
+                <div>
+                    <img src="./assets/png/icon-frameworks.png" alt="">
+                </div>
+                <h3>Frameworks</h3>
+                <ul>
+                    <li>TailwindCSS</li>
+                    <li>Ruby on Rails</li>
+                    <li>Vue</li>
+                    <li>Nuxt</li>
+                </ul>
+            </div>
+            <div class="second-card">
+                <div>
+                    <img src="./assets/png/icon-skills.png" alt="">
+                </div>
+                <h3>Skills</h3>
+                <ul>
+                    <li>Github</li>
+                    <li>Terminal</li>
+                    <li>codepen</li>
+                    <li>Figma</li>
+                </ul>
+            </div>
+        </div>
+    </div>
     </main>
 </body>
 </html>
