Improved HTML file with semantic tags

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <button><img src="./assets/png/arrowtip.png" alt=""> </button>
         </div>
 
-        <div id="my-work">
+        <section id="my-work">
             <div class="first section">
                 <h2>My Recent Works</h2>
                 <img src="./assets/png/separator.png" alt="separator">
@@ -127,8 +127,8 @@
                     <a href="https://wootbit.io">See Project</a>
                 </div>
             </div>
-        </div>
-<div id="about-me">
+        </section>
+<section id="about-me">
     <div class="about-me-first">
         <img id="top-right-img" src="./assets/svg/1-aboutme-mobile.svg" alt="">
         <h2>About me</h2>
@@ -137,8 +137,8 @@
             <a href="#">Get My Resume</a>  
             <img id="bottom-left-img" src="./assets/svg/2-aboutme-mobile.svg" alt="">
         </div>
-        <div class="about-me-second">
-            <div class="second-card">
+        <ul class="about-me-second">
+            <li class="second-card">
                 <div>
                     <img src="./assets/png/icon-language.png" alt="">
                 </div>
@@ -149,8 +149,8 @@
                     <li>Go</li>
                     <li>Ruby</li>
                 </ul>
-            </div>
-            <div class="second-card">
+            </li>
+            <li class="second-card">
                 <div>
                     <img src="./assets/png/icon-frameworks.png" alt="">
                 </div>
@@ -161,8 +161,8 @@
                     <li>Vue</li>
                     <li>Nuxt</li>
                 </ul>
-            </div>
-            <div class="second-card">
+            </li>
+            <li class="second-card">
                 <div>
                     <img src="./assets/png/icon-skills.png" alt="">
                 </div>
@@ -173,9 +173,9 @@
                     <li>codepen</li>
                     <li>Figma</li>
                 </ul>
-            </div>
-        </div>
-    </div>
+            </li>
+        </ul>
+    </section>
     </main>
 </body>
 </html>
