--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="style.css">
     <title>Abel's Amazing Work</title>
 </head>
+
 <body>
     <header id="header">
         <a href="/" id="welcome">Welcome</a>
         <nav>
             <button>
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon-md" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon-md" fill="none" viewBox="0 0 24 24"
+                    stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
                 </svg>
             </button>
@@ -21,10 +24,11 @@
     <main class="landing">
         <div class="landiv">
             <h1>Hey there. I'm Abel<br><span class="greeny">I'm a software developer</span></h1>
-            <p id="main-support-text"> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+            <p id="main-support-text"> I can help you build a product , feature or website Look through some of my work
+                and experience! If you like what you see and have a project you need coded,
                 don’t hestiate to contact me.</p>
         </div>
-        <div id="logo-cloud">
+        <div class="logo-cloud">
             <ul>
                 <li>
                     <a href="#"><img src="./assets/svg/twitter.svg" alt="twitter"></a>
@@ -36,7 +40,7 @@
                     <a href="#"><img src="./assets/svg/medium.svg" alt="Medium"></a>
                 </li>
                 <li>
-                    <a href="#"><img src="./assets/svg/github.svg" alt="Github" ></a>
+                    <a href="#"><img src="./assets/svg/github.svg" alt="Github"></a>
                 </li>
                 <li>
                     <a href="#"><img src="./assets/svg/angellist.svg" alt="Angellist"></a>
@@ -128,54 +132,94 @@
                 </div>
             </div>
         </section>
-<section id="about-me">
-    <div class="about-me-first">
-        <img id="top-right-img" src="./assets/svg/1-aboutme-mobile.svg" alt="">
-        <h2>About me</h2>
-        <p>  I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
-            don’t hestiate to contact me.</p>
-            <a href="#">Get My Resume</a>  
-            <img id="bottom-left-img" src="./assets/svg/2-aboutme-mobile.svg" alt="">
-        </div>
-        <ul class="about-me-second">
-            <li class="second-card">
-                <div>
-                    <img src="./assets/png/icon-language.png" alt="">
-                </div>
-                <h3>Languages</h3>
+        <section id="about-me">
+            <div class="about-me-first">
+                <img id="top-right-img" src="./assets/svg/1-aboutme-mobile.svg" alt="">
+                <h2>About me</h2>
+                <p> I can help you build a product , feature or website Look through some of my work and experience! If
+                    you like what you see and have a project you need coded,
+                    don’t hestiate to contact me.</p>
+                <a href="#">Get My Resume</a>
+                <img id="bottom-left-img" src="./assets/svg/2-aboutme-mobile.svg" alt="">
+            </div>
+            <ul class="about-me-second">
+                <li class="second-card">
+                    <div>
+                        <img src="./assets/png/icon-language.png" alt="">
+                    </div>
+                    <h3>Languages</h3>
+                    <ul>
+                        <li>JavaScript</li>
+                        <li>PHP</li>
+                        <li>Go</li>
+                        <li>Ruby</li>
+                    </ul>
+                </li>
+                <li class="second-card">
+                    <div>
+                        <img src="./assets/png/icon-frameworks.png" alt="">
+                    </div>
+                    <h3>Frameworks</h3>
+                    <ul>
+                        <li>TailwindCSS</li>
+                        <li>Ruby on Rails</li>
+                        <li>Vue</li>
+                        <li>Nuxt</li>
+                    </ul>
+                </li>
+                <li class="second-card">
+                    <div>
+                        <img src="./assets/png/icon-skills.png" alt="">
+                    </div>
+                    <h3>Skills</h3>
+                    <ul>
+                        <li>Github</li>
+                        <li>Terminal</li>
+                        <li>codepen</li>
+                        <li>Figma</li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
+
+            <form action="https://formspree.io/f/mzbyokjj"
+            method="POST">
                 <ul>
-                    <li>JavaScript</li>
-                    <li>PHP</li>
-                    <li>Go</li>
-                    <li>Ruby</li>
+                    <li><label class="invisible" for="name">Name<input placeholder="Full name" id="name" type="text" name="Full_name"></li>
+
+                    <li><label class="invisible" for="email">Email</label><input placeholder="Email address" id="email" type="email" name="Email"></li>
+
+                    <li><label class="invisible" for="message"></label>Message<textarea name="Message" id="message" maxlength="500" rows="5">Enter text here</textarea></li>
                 </ul>
-            </li>
-            <li class="second-card">
-                <div>
-                    <img src="./assets/png/icon-frameworks.png" alt="">
-                </div>
-                <h3>Frameworks</h3>
+                <button type="submit"> Get in touch</button>
+            </form>
+            <div class="logo-cloud">
                 <ul>
-                    <li>TailwindCSS</li>
-                    <li>Ruby on Rails</li>
-                    <li>Vue</li>
-                    <li>Nuxt</li>
+                    <li>
+                        <a href="#"><img src="./assets/svg/twitter.svg" alt="twitter"></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="./assets/svg/Linkedin-icon.svg" alt="LinkedIn"></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="./assets/svg/medium.svg" alt="Medium"></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="./assets/svg/github.svg" alt="Github"></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="./assets/svg/angellist.svg" alt="Angellist"></a>
+                    </li>
                 </ul>
-            </li>
-            <li class="second-card">
-                <div>
-                    <img src="./assets/png/icon-skills.png" alt="">
-                </div>
-                <h3>Skills</h3>
-                <ul>
-                    <li>Github</li>
-                    <li>Terminal</li>
-                    <li>codepen</li>
-                    <li>Figma</li>
-                </ul>
-            </li>
-        </ul>
-    </section>
+            </div>
+            <a href="mailto:aherrera@wootbit.io">aherrera@wootbit.io</a>
+        </section>
+
+
     </main>
 </body>
+
 </html>
