made some validation corrections

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
                     <li><label class="invisible" for="email">Email</label><input placeholder="Email address" id="email" required type="email" name="Email"></li>
 
-                    <li><label class="invisible" for="message">Message</label><textarea name="Message" id="message" maxlength="500" required rows="5">Enter text here</textarea></li>
+                    <li><label class="invisible" for="message">Message</label><textarea placeholder="Enter text here" name="Message" id="message" maxlength="500" required rows="5"></textarea></li>
                 </ul>
                 <button type="submit" id="form-btn"> Get in touch</button>
             </form>
