--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         </section>
 
         <section class="form-section">
-            <h2>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
+            <h2 id="form-start">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
 
             <form action="https://formspree.io/f/mzbyokjj"
             method="POST">
