Add alternate text for images & improve the page's title

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Abel's Amazing Work</title>
+    <title>Abel's Portfolio</title>
 </head>
 
 <body>
@@ -47,25 +47,25 @@
                 <div class="logo-cloud">
                     <ul>
                         <li>
-                            <a href="#"><img src="./assets/svg/twitter.svg" alt="twitter"></a>
+                            <a href="#"><img src="./assets/svg/twitter.svg" alt="link to abel's Twitter profile"></a>
                         </li>
                         <li>
-                            <a href="#"><img src="./assets/svg/Linkedin-icon.svg" alt="LinkedIn"></a>
+                            <a href="#"><img src="./assets/svg/Linkedin-icon.svg" alt="link to abel's LinkedIn"></a>
                         </li>
                         <li>
-                            <a href="#"><img src="./assets/svg/medium.svg" alt="Medium"></a>
+                            <a href="#"><img src="./assets/svg/medium.svg" alt="link to abel's Medium"></a>
                         </li>
                         <li>
-                            <a href="#"><img src="./assets/svg/github.svg" alt="Github"></a>
+                            <a href="#"><img src="./assets/svg/github.svg" alt="link to abel's Github"></a>
                         </li>
                         <li>
-                            <a href="#"><img src="./assets/svg/angellist.svg" alt="Angellist"></a>
+                            <a href="#"><img src="./assets/svg/angellist.svg" alt="link to abel's Angellist"></a>
                         </li>
                     </ul>
                 </div>
                 <div class="scroll-down">
                     <a href="#my-work">
-                        <img src="./assets/png/arrowtip.png" alt=""> 
+                        <img src="./assets/png/arrowtip.png" alt="button to works section"> 
                     </a>
                 </div>
             </section>
@@ -73,13 +73,13 @@
                 <section id="my-work">
                     <div class="first section">
                 <h2>My Recent Works</h2>
-                <img src="./assets/png/separator.png" alt="separator">
+                <img src="./assets/png/separator.png" alt="separator image">
             </div>
 
             <div class="second section">
 
                 <div class="card">
-                    <img src="./assets/screenshots/placesplit.png" alt="test.placesplit.com">
+                    <img src="./assets/screenshots/placesplit.png" alt="thumbnail of test.placesplit.com">
                     <h3>Placesplit Real Estate Agency</h3>
                     <ul>
                         <li>Vue</li>
@@ -91,7 +91,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="./assets/screenshots/wootbit-io.png" alt="wootbit.io">
+                    <img src="./assets/screenshots/wootbit-io.png" alt="thumbnail of www.wootbit.io">
                     <h3>Wootbit Software Develorper Agency</h3>
                     <ul>
                         <li>Vue</li>
@@ -220,19 +220,19 @@
             <div class="logo-cloud" id="footer-icons">
                 <ul>
                     <li>
-                        <a href="#"><img src="./assets/svg/twitter.svg" alt="twitter"></a>
+                        <a href="#"><img src="./assets/svg/twitter.svg" alt="link to abel's Twitter profile"></a>
                     </li>
                     <li>
-                        <a href="#"><img src="./assets/svg/Linkedin-icon.svg" alt="LinkedIn"></a>
+                        <a href="#"><img src="./assets/svg/Linkedin-icon.svg" alt="link to abel's LinkedIn"></a>
                     </li>
                     <li>
-                        <a href="#"><img src="./assets/svg/medium.svg" alt="Medium"></a>
+                        <a href="#"><img src="./assets/svg/medium.svg" alt="link to abel's Medium"></a>
                     </li>
                     <li>
-                        <a href="#"><img src="./assets/svg/github.svg" alt="Github"></a>
+                        <a href="#"><img src="./assets/svg/github.svg" alt="link to abel's Github"></a>
                     </li>
                     <li>
-                        <a href="#"><img src="./assets/svg/angellist.svg" alt="Angellist"></a>
+                        <a href="#"><img src="./assets/svg/angellist.svg" alt="link to abel's Angellist"></a>
                     </li>
                 </ul>
             </div>
