Add linter fixes

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 <form action="https://formspree.io/f/mzbyokjj"
                 method="POST">
                 <ul>
-                    <li><input placeholder="Full name" id="name" type="text" maxlength="30" required name="Full_name"></li>
+                    <li><label class="invisible" for="name">Full name</label><input placeholder="Full name" id="name" type="text" maxlength="30" required name="Full_name"></li>
                     
                     <li><label class="invisible" for="email">Email</label><input placeholder="Email address" id="email" required type="email" name="Email"></li>
                     
