Create mobile menu

--- a/index.html
+++ b/index.html
@@ -238,7 +238,28 @@
             </div>
             <a href="mailto:aherrera@wootbit.io" id="email-id">aherrera@wootbit.io</a>
         </section>
-        
+        <div class="menuMobile" hidden>
+            <button>
+                <img src="assets/png/IconCancel.png" alt="Close menu">
+            </button> 
+            <ul>
+                <li>
+                    <a href="#my-work">
+                        Portfolio
+                    </a>
+                </li>
+                <li>
+                    <a href="#about-me">
+                        About
+                    </a>
+                </li>
+                <li>
+                    <a href="#form-and-title">
+                        Contact
+                    </a>
+                </li>
+            </ul>
+        </div>
         
     </main>
 </body>
