Add linter fixes

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-MC0G7V8RGW"></script>
 <script>
@@ -11,7 +12,6 @@
 
   gtag('config', 'G-MC0G7V8RGW');
 </script>
-    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
@@ -27,7 +27,7 @@
                 <li><a href="#about-me">About</a></li>
                 <li><a href="#form-start">Contact</a></li>
             </ul>
-            <button class="only-mobile menu-toggle"> 
+            <button class="only-mobile menu-toggle" type="button"> 
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon-md" fill="none" viewBox="0 0 24 24"
                 stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
@@ -240,7 +240,7 @@
             <a href="mailto:aherrera@wootbit.io" id="email-id">aherrera@wootbit.io</a>
         </section>
         <div class="menu-mobile no-display">
-            <button class="menu-toggle">
+            <button class="menu-toggle" type="button">
                 <img src="assets/png/IconCancel.png" alt="Close menu">
             </button> 
             <ul>
@@ -263,6 +263,6 @@
         </div>
         
     </main>
+    <script src="./index.js"></script>
 </body>
-<script src="./index.js"></script>
 </html>
