Add html and css for the popup window

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <li>Laravel</li>
                         <li>MailiSearch</li>
                     </ul>
-                    <a href="https://test.placesplit.com">See Project</a>
+                    <button class="popup-toggle ps" type="button">See Project</button>
                 </div>
 
                 <div class="card">
@@ -100,7 +100,7 @@
                         <li>Laravel</li>
                         <li>Elastic Search</li>
                     </ul>
-                    <a href="https://wootbit.io">See Project</a>
+                    <button class="popup-toggle wb" type="button">See Project</button>
                 </div>
 
                 <div class="card">
@@ -112,7 +112,7 @@
                         <li>Laravel</li>
                         <li>MailiSearch</li>
                     </ul>
-                    <a href="https://test.placesplit.com">See Project</a>
+                    <button class="popup-toggle ps" type="button">See Project</button>
                 </div>
 
                 <div class="card">
@@ -124,7 +124,7 @@
                         <li>Laravel</li>
                         <li>Elastic Search</li>
                     </ul>
-                    <a href="https://wootbit.io">See Project</a>
+                    <button class="popup-toggle wb" type="button">See Project</button>
                 </div>
 
                 <div class="card">
@@ -136,7 +136,7 @@
                         <li>Laravel</li>
                         <li>MailiSearch</li>
                     </ul>
-                    <a href="https://test.placesplit.com">See Project</a>
+                    <button  class="popup-toggle ps" type="button">See Project</button>
                 </div>
 
                 <div class="card">
@@ -148,7 +148,7 @@
                         <li>Laravel</li>
                         <li>Elastic Search</li>
                     </ul>
-                    <a href="https://wootbit.io">See Project</a>
+                    <button class="popup-toggle wb" type="button">See Project</button>
                 </div>
             </div>
         </section>
@@ -239,6 +239,7 @@
             </div>
             <a href="mailto:aherrera@wootbit.io" id="email-id">aherrera@wootbit.io</a>
         </section>
+
         <div class="menu-mobile no-display">
             <button class="menu-toggle" type="button">
                 <img src="assets/png/IconCancel.png" alt="Close menu">
@@ -260,6 +261,29 @@
                     </a>
                 </li>
             </ul>
+        </div>
+        <div class="popup-project-overlay no-display">
+            <div class="popup-project-content">
+                <button class="popup-toggle floater" type="button">
+                    <img src="assets/png/IconCancel.png" alt="Close menu">
+                </button> 
+                <img class="popup-image" src="./assets/screenshots/wootbit-io.png" alt="">
+                <h2 class="popup-title">Wootbit Software Developer Agency</h2>
+                <ul class="popup-list">
+                    <li>JavaScript</li>
+                    <li>PHP</li>
+                    <li>Go</li>
+                    <li>Ruby</li>
+                </ul>
+                <p class="popup-text">
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it 1960s with the releaLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it 1960s with the release.
+                </p>
+                <div class="popup-button-container">
+                    <a href="#" class="popup-button live" target="_blank" rel="noopener"> See live <img src="./assets/png/see-live.svg" alt=""></a>
+                    <a href="#" class="popup-button code" target="_blank" rel="noopener"> See Source <img src="./assets/png/github-white.png" alt=""></a>
+                </div>
+
+            </div>
         </div>
         
     </main>
