--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
                 <form action="https://formspree.io/f/mzbyokjj"
                 method="POST" id="contact-form">
                 <ul>
-                    <li><label class="invisible" for="name">Full name</label><input placeholder="Full name" id="name" type="text" maxlength="30" required name="Full_name"></li>
+                    <li><label class="invisible" for="name">Full name</label>
+                        <input placeholder="Full name" id="name" type="text" maxlength="30" required name="Full_name"></li>
                     
                     <li>
                         <label class="invisible" for="email">
@@ -146,7 +147,8 @@
                         <input placeholder="Email address" id="email" required type="email" name="Email">
                     </li>
                     
-                    <li><label class="invisible" for="message">Message</label><textarea placeholder="Enter text here" name="Message" id="message" maxlength="500" required rows="5"></textarea></li>
+                    <li><label class="invisible" for="message">Message</label>
+                        <textarea placeholder="Enter text here" name="Message" id="message" maxlength="500" required rows="5"></textarea></li>
                 </ul>
                 <button type="submit" id="form-btn"> Get in touch</button>
                 <ul class="errors no-display">
